# DXQ

./: CMakeLists.txt  OhKami.pro  README  README.md  branch_add_test.txt  canvasmanager.cpp  canvasmanager.h  committest.txt  config.h  filemanager.cpp  filemanager.h  layer.h  main.cpp  mainwindow.cpp  paintmanager.cpp  paintmanager.h  pics.qrc  stroke.h  个人报告_3170106196沈刻.md
MiniSQL_final/: MiniSQL_final.sln
MiniSQL_final/Debug/: MiniSQL_final.ilk
MiniSQL_final/MiniSQL_final/: INDEX_FILE  MiniSQL_final.vcxproj  MiniSQL_final.vcxproj.filters  TABLE_CATALOG_student2
Tank/: Tank.sln
Tank/Tank/: Tank.cpp  Tank.h  Tank.pro  Tank.qrc  Tank.ui  Tank.vcxproj  Tank.vcxproj.filters  main.cpp  pvewindow.cpp  pvewindow.h  pvewindow.ui  pvpwindow.cpp  pvpwindow.h  pvpwindow.ui
Tank/build-Tank-Desktop_Qt_5_11_1_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_tank.h  (+2 more)
app/: Tank.cpp  Tank.h
common/: Bot.cpp  Bot.h  Bullet.cpp  Bullet.h  GameEntry.h  GameMap.cpp  GameMap.h  GameTimer.h  Player.cpp  Player.h  TankEntry.cpp  TankEntry.h  Wall.cpp  Wall.h
doc/: GroupReport.md  个人报告_余林翰_3170105270.md  个人报告_张淼_3170105674.md
map/: GameMap.h
module/: layer.h  stroke.h
test/: test.sln
view and window/: mainwindow.cpp  mainwindow.h
viewmodule/: canvasmanager.cpp  canvasmanager.h  filemanager.cpp  filemanager.h  paintmanager.cpp  paintmanager.h
window/: GameMenuBackground.cpp  GameMenuBackground.h  GameMenuPanel.cpp  GameMenuPanel.h  GameMenuPanel2.cpp  GameMenuPanel2.h  KeyMenuPlayer01.cpp  KeyMenuPlayer01.h  KeyMenuPlayer02.cpp  KeyMenuPlayer02.h
(+45 files in other folders)
